--- a/ceramic_band_heater.html
+++ b/ceramic_band_heater.html
@@ -141,7 +141,20 @@
             <p style = "text-align: justify;">
                 Ceramic Band Heaters are specifically designed and engineered to meet the ever increasing demand for energy conservation and to improve operation efficiency. 
                 Ceramic band heaters are next generation electric heaters which are at pivot place for plastic processing machines to work efficiently and effectively. With best quality of components used to reach high power levels, and offers a long series of benefits including highly durable, Rapid heat transmission. Energy efficient, uniform heating, Easy installation.<br><br>
-
+              
+              <strong>Electrical Specifications:</strong><br>
+              Resistance: +10% -5%<br>
+              Wattage: +5% -10%<br>
+              Voltage: 220V AC to 480V AC<br>
+              Maximum Watt Density: 35 watt/sq.inch<br>
+              Maximum Working Temperature: 300 Deg Celsius <br><br>
+              <strong>Dimensional Specifications:</strong><br>
+              Minimum diameter: 50mm<br>
+              Minimum WIdth: 25mm<br>
+              Overall Thickness: 12-15mm<br>
+              Width-normal: multiple of 15+1 name<br>
+              Std. gap between edges: 5 to 10 mm<br><br>              
+              
                 <strong>Spiral resistive winding</strong> by nickel chrome 80/20 wire wide sectioned with resultant low level specific load.<br><br>
                 <strong>Insulation</strong> in high purity ceramic with high mechanical resistance, to the thermal shocks, and high dielectric strength.<br><br>
                 <strong>Steel terminal box</strong> for high temperature working.<br><br>
