--- a/coil_nozzle_heater.html
+++ b/coil_nozzle_heater.html
@@ -134,11 +134,11 @@
               Nozzle heaters with built in thermocouple are also available. <br><br>
 
               <strong>Features:</strong><br>
-              Sheath material: Non-corrosive SS / Aluminized Steel 
-              Voltage Range: 24V - 250V
-              Temp range for up to 400°C
-              Option of J type or K type thermocouple available on request
-              Negligible effect of material spillage
+              Sheath material: Non-corrosive SS / Aluminized Steel <br>
+              Voltage Range: 24V - 250V<br>
+              Temp range for up to 400°C<br>
+              Option of J type or K type thermocouple available on request<br>
+              Negligible effect of material spillage<br>
               Minimum inner diameter 25 mm <br><br>
 
               <strong>Applications:</strong><br>
