--- a/high_density_cartridge_heater.html
+++ b/high_density_cartridge_heater.html
@@ -136,7 +136,17 @@
             <p style = "text-align: justify;">
               Cartridge heater often considered as component heater has a heating coil wounded on a ceramic core and are cylindrical-shaped, heavy-duty Joule heating element. Electricity flows through coil when two or three-phase voltage is applied. The electricity heats the coil and, subsequently, the cartridge sheath. The watt density (in Watt/inch²) depends on the number of spirals or turns per inch. The sheath comes in contact with the surface being heated. Insulation in the cartridge heater ensures that the heating wire never comes in contact with the sheath and protects the sheath from melting in case of any mishap. The leads that come out of the heater terminal have metal conduit, or silicon sleeves to protect from high temperature. Lead wires are often fiberglass or Teflon
               SMAJ manufacture high density cartridge heaters using only high quality materials, which guarantees performance under extreme conditions. Thus, making it suitable for most industry applications for fast delivery. For special applications, it can be customized to suit individual requirements for easier installation, special power distribution, and individual connections. <br><br>
-
+              
+              <strong> Specifications: </strong><br>
+              Sheath material: SS<br>
+              Surface Loading: upto 150 watts / in2<br>
+              Voltage Range: 12 to 440 volts<br>
+              Leakage Current: < 0.5 mA<br>
+              Available Diameters:<br>
+              Min Dia: 1/4” & 6 mm, Max Dia: 1” & 25 mm<br>
+              Available Lengths:<br>
+              Min length: 1½” & 40 mm, Max length: 50” & 1500 mm<br><br>
+              
               <strong>Features and Advantages:</strong><br>
               - Higher watt densities permit smaller heaters to be used without sacrificing life expectancy. This result in up- front as well as long term cost savings.<br>
               - Swaged construction provides maximum support for the resistance wire, eliminating the effects of vibration and shock.<br>
