--- a/immersion_heater.html
+++ b/immersion_heater.html
@@ -142,6 +142,21 @@
                             electrical ratings are available. Electric Process heaters are the most efficient methods
                             for heating water, light to heavy oils, heat transfer fluids,air and other gases and for
                             generating super heated steam.<br><br>
+
+                            <strong>Specifications:</strong><br>
+                            A wide selection of Watt Densities, Power Ratings, and Voltages.<br>
+                            Brazed, Welded, or Removable elements. <br>
+                            Capillary Thermostats, multiple types of Thermocouples, RTDs, andhi-limit Thermostats available in a thermowell or strapped to the element sheath.<br>
+                            Terminal Enclosure choices include General Purpose (std.),Weather-Resistant, Explosion-Resistant, Economy and Extended Head with cooling fins for High-temperature Applications.<br>
+                            Can be supplied with Power Distribution zones for Multiple Circuits.Center core Baffles for increased velocity and staggered baffle plates available to increase turbulence for betterheat transfer<br><br>
+                            <strong>Tube Diameters:</strong><br>
+                            Tubular Immersion heaters are available in the following diameters. Tube dia : 8 mm, 11 mm, 14 mm, 17 mm, 19mm. Watt Density upto 60 w / Sq.in (9.3 w / Sq.cm)<br><br>
+                            <strong>Mountings:</strong><br>
+                            Immersion heaters incorporate high quality tubular elements welded or brazed onto a wide range of mounting fittings. These mounting fittings include:<br>
+                            - Standard flanges<br>
+                            - BSP and NPT threaded flanges - 1”BSP to 3” BSP<br>
+                            Custom flanges, Screw plugs and other customfittings to suit the applications<br><br>
+
                             <strong>IMMERSION HEATERS TYPICAL CONFIGURATIONS INCLUDE:</strong><br>
                             - Flanged Immersion Heaters<br>
                             - Screw Plug Immersion Heaters<br>
