--- a/low_density_cartridge_heater.html
+++ b/low_density_cartridge_heater.html
@@ -139,6 +139,16 @@
               The Low and Medium Density Cartridge Heater design consists of a helically wound resistance coil made from nickel-chrome wire, evenly stretched and strung through holes in a round ceramic insulator. The element assembly is inserted into a Chrome Nickel Steel. This alloy provides the best combination of physical strength and resistance to heat oxidation up to 450°C
               Specially selected grain size and high purity magnesium oxide is used to fill all remaining space inside the ceramic insulator to increase thermal conductivity, dielectric strength, and provide longer operating life of the Cartridge Heater.<br><br>
 
+              <strong>Specifications:</strong><br>
+              Max. Surface Load   upto 35w in/sq2<br>
+              Wattage Tolerance ±10%	<br>
+              Insulation Resistance ≥ 5 MΩ at 500V (DC)	<br>
+              Standard Dia Range 8mm to 40mm	<br>
+              Diameter Tolerance	- 0.1mm	- <br>
+              Standard Length	Minimum 50mm<br>
+              Length Tolerance	± 1.5%, min ± 2mm<br>
+              Max. Sheath Temperature	400° C<br><br>
+
               <strong>Applications:</strong><br>
               Plastic extruders<br>
               Plastic molding<br>
