--- a/mica_band_heater.html
+++ b/mica_band_heater.html
@@ -144,7 +144,21 @@
                             machines. Mica Band assure maintaining the lowest winding temperature possible, keeping
                             low-mass heating element assembly for fast heat-up and quick thermal response to controls.
                             It corporate the low thermal expansion built these heaters is designed with brass and
-                            stainless steel sheaths in mica band to accommodate high wattage requirements.<br>
+                            stainless steel sheaths in mica band to accommodate high wattage requirements.<br><br>
+
+                            <strong>Electrical Specifications:</strong><br>
+                            Resistance: +10% -5%<br>
+                            Wattage: +5% -10%<br>
+                            Voltage: 220V AC to 480V AC<br>
+                            Maximum Watt Density: 25 watt/sq.inch<br>
+                            Maximum Working Temperature: 350 Deg Celsius <br><br>
+                            <strong>Dimensional Specifications:</strong><br>
+                            Minimum diameter: 25mm<br>
+                            Minimum WIdth: 20mm<br>
+                            Overall Thickness: 3-8mm<br>
+                            Width-normal: multiple of 20+1 name<br>
+                            Std. gap between edges: 5 to 10 mm<br><br>
+
                             <strong>Winding nickel</strong> chrome 80/20 with consequent low specific load obtained by
                             winding machine assuring constant repeatability and uniformity.
                             <strong> Insulation </strong>pure mica with very low inorganic alloy content.<br>
