--- a/micro_coil_heater.html
+++ b/micro_coil_heater.html
@@ -152,6 +152,18 @@
                             Our unformed Micro Coil Heater is also supplied in the hairpin bend shape as standard. Micro
                             Coil Heater solves heating problems, where space is limited<br><br>
 
+                            <strong>Specifications:</strong><br>
+                            Wattage	± 10 %<br>
+                            Max. Sheath Temperature	750 ° C / 1380 ° F<br>
+                            Insulation Resistance	≥ 5 MΏ at500V (DC)<br>
+                            Max. Straight Length	2000 mm<br>
+                            Sheath Material	Stainless steel<br>
+                            Two standard tube diameters, 1.50 mm and 1.80mm <br>
+                            Faster Heat Transfer with flat cross section tube (1.30mm x 2.30mm)<br>
+                            Max. Surface Load	4 W/sq. cm or 25 W/sq. inch<br>
+                            Min. Coiling ID	8 mm<br>
+                            Staggered cold leads<br><br>
+
                             <strong>Applications:</strong><br>
                             - PET Preform Moulds l Hot Runner Nozzles & Bushings l Thin Walled Container Moulds
                         </p>
