--- a/micro_tubular_coil_heater.html
+++ b/micro_tubular_coil_heater.html
@@ -156,7 +156,24 @@
                             application allows the use of larger processing temperature or where the installation
                             location or the design requires protection against overheating. The standard connection for
                             our Micro Tubular Coil Heater is a 1000 mm PTFE-insulated lead wire with Fiberglass sleeve
-                            with protective earth conductor lead.<br>
+                            with protective earth conductor lead.<br><br>
+
+                            <strong> Specifications: </strong><br>
+                            Max. Sheath Temperature	750 ° C / 1380 ° F<br>
+                            Insulation Resistance	≥ 5 MΏ at 500V (DC)<br>
+                            Length Tolerance	± 5%<br>
+                            Thermocouple	Type J / K<br>
+                            Diameter Tolerance	± 0.15 mm<br>
+                            Voltage Range: 24 to 250 volts<br>
+                            Wattage	± 10 %<br>
+                            Standard Wattage: 250W, 330W, 400W, 470W, 550W, 650W, 750W, 850W, 1000W, 1100W<br>
+                            Connection Wires: 1000 mm Stranded Nickel wires with PTFE coating<br>
+                            Available Cross Sections (in mm):<br>
+                            Round: 2.9, 3.3, 3.8<br>
+                            Square: 3 x 3, 3.3 x 3.3<br>
+                            Flat: 1.8 x 3.2, 2.5 x 4.3, 4 x 6.4<br>
+                            Tolerance on all dimensions ± 0.1mm<br><br>
+
                             <strong> Application: </strong><br>
                             Hot Runner Nozzles & Bushings l Tube Extrusion l Pipe Forming
                         </p>
