--- a/tubular_heater.html
+++ b/tubular_heater.html
@@ -132,9 +132,27 @@
         <div class="col-md-6">
           <div class="right-content">
             <h4>Tubular Heater</h4>
-            <p style = "text-align: justify;">Tubular heaters of any diameter can be finned with steel or stainless steel Finns material to increase the surface area. 
-                Finns can be spiral in shape or punched to suit the application. Designed for rapid uniform heat transfer in air heating ducts. 
-                Also used in blower type comfort heating units, recirculating ovens and other industrial processing equipment and processes requiring heated air.<br><br>
+            <p style = "text-align: justify;">
+              The most versatile of all electric heating elements, the tubular heaters are capable of being formed into virtually any shape & configuration, brazed or welded to any metal surface and can be cast into different metals. Depending on the application different tube diameters and different tube Sheath materials are available.<br>
+              Heating of air requires an oxidized tube surface. The Commonly specified Sheath Materials are SS304, SS316, and SS316L & INCOLOY for high temperature applications. The range of ratings, sizes, materials and terminations available, makes the tubular heater adaptable to many industrial, commercial and Process applications. 
+              All wattages and voltages are possible as long as the resistance is within the fixed limits and the surface load is not exceeded.<br><br></p>
+
+              <h4>Finned Tubular Heater</h4>
+              <p style = "text-align: justify;">
+              Tubular heaters of any diameter can be finned with steel or stainless steel Finns material to increase the surface area. 
+              Finns can be spiral in shape or punched to suit the application. Designed for rapid uniform heat transfer in air heating ducts. 
+              Also used in blower type comfort heating units, recirculating ovens and other industrial processing equipment and processes requiring heated air.<br><br>
+
+              <strong>Specifications:</strong><br><br>
+              <strong>Tube Sheath Materials:</strong><br>
+              Different sheath materials are available for different applications. Options include Copper, SS 304, SS 316, SS 321, Incoloy.Tolerances: Resistance +10% -5%,<br> Wattage + 5% +10%, Length +/_ 3%. a <br>
+              <strong>Tube Diameters:</strong><br>
+              Tubular heating elements are available in the following diameters.<br>
+              Tube dia : 6.5mm, 8 mm, 11 mm, 14 mm, 17 mm, 19 mm.<br>
+              Tubular heaters lengths can extend upto 5.8 meter +<br>
+              Maximum Sheath Watt Density: 35 w / in2<br>
+              NOTE: Cold zone at each end: 1-1/2” min.<br><br>
+
                 <strong>Mountings:</strong>
                 Variety of mountings are available to suit the application area. Tubular heaters can be brazed or welded to different sizes of threaded flanges, plate flanges, nipples, bolts.<br><br>
                 <strong>Applications:</strong>
@@ -148,7 +166,7 @@
               <input type="submit" class="button" value="Order Now!">
             </form> -->
             <div class="col-md-12" style="margin-left: -15px;">
-              <a class="read_more" href="contact.html">Contact U</a>
+              <a class="read_more" href="contact.html">Contact Us</a>
            </div>
             <div class="down-content">
               <div class="categories">
