--- a/power_saving_heater.html
+++ b/power_saving_heater.html
@@ -138,7 +138,22 @@
         <div class="col-md-6">
           <div class="right-content">
             <h4>Power Saving Heater</h4>
-            <p style = "text-align: justify;">SMAJ’s specially designed and engineered the power saver heater to meet the ever increasing demand for energy conservation and to improve operations efficiency, capable of generating suitable temperature for processing resign with higher processing temperature. Energy Conservation is achieved by using thick Ceramic fiber insulating blanket on surface. Power consumption is reduced upto 30 percent because of low thermal conductivity of the ceramic fiber insulation. The external surface temperatures of the power saver band heaters are approximately 800 deg C <br><br>
+            <p style = "text-align: justify;">SMAJ’s specially designed and engineered the power saver heater to meet the ever increasing demand for energy conservation and to improve operations efficiency, capable of generating suitable temperature for processing resign with higher processing temperature. Energy Conservation is achieved by using thick Ceramic fiber insulating blanket on surface. 
+              Power consumption is reduced upto 30 percent because of low thermal conductivity of the ceramic fiber insulation. The external surface temperatures of the power saver band heaters are approximately 800 deg C <br><br>
+
+              <strong>Electrical Specifications:</strong><br>
+              Resistance: +10% -5%<br>
+              Wattage: +5% -10%<br>
+              Voltage: 220V AC to 480V AC<br>
+              Maximum Watt Density: 50 watt/sq.inch<br>
+              Maximum Working Temperature: 800 Deg Celsius <br><br>
+              <strong>Dimensional Specifications:</strong><br>
+              Minimum diameter: 50mm<br>
+              Minimum WIdth: 50mm<br>
+              Overall Thickness: 25mm, 50mm, 75mm, 100mm<br>
+              Width-normal: multiple of 20+1 name<br>
+              Std. gap between edges: 5 to 10 mm<br><br>
+
            <strong> Spiral Resistive Winding </strong> by nickel chrome 80/20 wire wide sectioned with resultant low level specific load.<br><br>
             <strong>Insulation</strong>in high purity ceramic with high mechanical resistance, to the thermal shocks and high dielectric strength. <br><br>
             <strong>Insulation Thickness </strong>1 inch, 2 inch, 3 inch and 4 inch 
