--- a/micro_tubular_coil_heater.html
+++ b/micro_tubular_coil_heater.html
@@ -175,7 +175,8 @@
                             Tolerance on all dimensions ± 0.1mm<br><br>
 
                             <strong> Application: </strong><br>
-                            Hot Runner Nozzles & Bushings l Tube Extrusion l Pipe Forming
+                            Hot Runner Nozzles & Bushings l Tube Extrusion l Pipe Forming<br><br>
+                            <span>In Stock</span>
                         </p>
                         <!-- <form action="" method="get">
               <label for="quantity">Quantity:</label>
