--- a/high_density_cartridge_heater.html
+++ b/high_density_cartridge_heater.html
@@ -69,7 +69,7 @@
                   <li class="nav-item active">
                     <a class="nav-link" href="index.html">Home</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item active">
                     <a class="nav-link" href="product.html">Products</a>
                  </li>
                  <li class="nav-item">
