--- a/brass_pressed_heater.html
+++ b/brass_pressed_heater.html
@@ -97,7 +97,7 @@
                                     <img src="images/brasspressedheaters1.jpeg" />
                                 </li>
                                 <li>
-                                    <img src="images/brasspressedheaters2.jpeg" />
+                                    <img src="#"/>
                                 </li>
                                 <!-- items mirrored twice, total of 12 -->
                             </ul>
@@ -108,7 +108,7 @@
                                     <img src="pics/brasspressedheaters1.jpeg" />
                                 </li>
                                 <li>
-                                    <img src="pics/brasspressedheaters2.jpeg" />
+                                    <img src="#" />
                                 </li>
                                 <!-- items mirrored twice, total of 12 -->
                             </ul>
