--- a/low_density_cartridge_heater.html
+++ b/low_density_cartridge_heater.html
@@ -102,13 +102,10 @@
             <div id="slider" class="flexslider">
               <ul class="slides">
                 <li>
-                  <img src="images/ldc1.jpg" />
+                  <img src="products/LDC/images/ldc1.jpg" />
                 </li>
                 <li>
-                  <img src="images/ldc2.jpg" />
-                </li>
-                <li>
-                  <img src="images/ldcspecs1.png" />
+                  <img src="products/LDC/images/ldc2.jpg" />
                 </li>
                 <!-- items mirrored twice, total of 12 -->
               </ul>
@@ -116,15 +113,11 @@
             <div id="carousel" class="flexslider">
               <ul class="slides">
                 <li>
-                  <img src="pics/ldc1.jpg" />
+                  <img src="products/LDC/pics/ldc1.jpg" />
                 </li>
                 <li>
-                  <img src="pics/ldc2.jpg" />
+                  <img src="products/LDC/pics/ldc2.jpg" />
                 </li>
-                <li>
-                  <img src="pics/ldcspecs1.png" />
-                </li>
-
                 <!-- items mirrored twice, total of 12 -->
               </ul>
             </div>
