--- a/manifold_heater.html
+++ b/manifold_heater.html
@@ -103,10 +103,19 @@
                         <div id="slider" class="flexslider">
                             <ul class="slides">
                                 <li>
-                                    <img src="images/manifoldheaters1.jpg" />
+                                    <img src="products/Manifold Heater/images/mf1.jpg" />
                                 </li>
                                 <li>
-                                    <img src="images/manifoldheaters2.jpeg" />
+                                    <img src="products/Manifold Heater/images/mf2.png" />
+                                </li>
+                                <li>
+                                    <img src="products/Manifold Heater/images/mf3.png" />
+                                </li>
+                                <li>
+                                    <img src="products/Manifold Heater/images/mf4.jpeg" />
+                                </li>
+                                <li>
+                                    <img src="products/Manifold Heater/images/mf5.jpg" />
                                 </li>
                                 <!-- items mirrored twice, total of 12 -->
                             </ul>
@@ -114,10 +123,19 @@
                         <div id="carousel" class="flexslider">
                             <ul class="slides">
                                 <li>
-                                    <img src="pics/manifoldheaters1.jpg" />
+                                    <img src="products/Manifold Heater/pics/mf1.jpg" />
                                 </li>
                                 <li>
-                                    <img src="pics/manifoldheaters2.jpeg" />
+                                    <img src="products/Manifold Heater/pics/mf2.png" />
+                                </li>
+                                <li>
+                                    <img src="products/Manifold Heater/pics/mf3.png" />
+                                </li>
+                                <li>
+                                    <img src="products/Manifold Heater/pics/mf4.jpeg" />
+                                </li>
+                                <li>
+                                    <img src="products/Manifold Heater/pics/mf5.jpg" />
                                 </li>
                                 <!-- items mirrored twice, total of 12 -->
                             </ul>
