--- a/mica_band_heater.html
+++ b/mica_band_heater.html
@@ -103,16 +103,13 @@
                         <div id="slider" class="flexslider">
                             <ul class="slides">
                                 <li>
-                                    <img src="images/micabandheater.jpg" />
+                                    <img src="products/Mica Band Heater/images/mb1.jpg" />
                                 </li>
                                 <li>
-                                    <img src="images/micabandheater1.jpeg" />
+                                    <img src="products/Mica Band Heater/images/mb2.jpeg" />
                                 </li>
                                 <li>
-                                    <img src="images/micaspecs1.png" />
-                                </li>
-                                <li>
-                                    <img src="images/micaspecs2.png" />
+                                    <img src="products/Mica Band Heater/images/mb3.jpg" />
                                 </li>
                                 <!-- items mirrored twice, total of 12 -->
                             </ul>
@@ -120,16 +117,13 @@
                         <div id="carousel" class="flexslider">
                             <ul class="slides">
                                 <li>
-                                    <img src="pics/micabandheater.jpg" />
+                                    <img src="products/Mica Band Heater/pics/mb1.jpg" />
                                 </li>
                                 <li>
-                                    <img src="pics/micabandheater1.jpg" />
+                                    <img src="products/Mica Band Heater/pics/mb2.jpeg" />
                                 </li>
                                 <li>
-                                    <img src="pics/micaspecs1.png" />
-                                </li>
-                                <li>
-                                    <img src="pics/micaspecs2.png" />
+                                    <img src="products/Mica Band Heater/pics/mb3.jpg" />
                                 </li>
                                 <!-- items mirrored twice, total of 12 -->
                             </ul>
