--- a/micro_coil_heater.html
+++ b/micro_coil_heater.html
@@ -103,13 +103,19 @@
                         <div id="slider" class="flexslider">
                             <ul class="slides">
                                 <li>
-                                    <img src="images/microcoilheaters1.jpg" />
+                                    <img src="products/Micro Coil Heater/images/mch1.png" />
                                 </li>
                                 <li>
-                                    <img src="images/microcoilheaters2.jpeg" />
+                                    <img src="products/Micro Coil Heater/images/mch2.jpg" />
                                 </li>
                                 <li>
-                                    <img src="images/microcoilheaterspecs.png" />
+                                    <img src="products/Micro Coil Heater/images/mch3.jpg" />
+                                </li>
+                                <li>
+                                    <img src="products/Micro Coil Heater/images/mch4.jpg" />
+                                </li>
+                                <li>
+                                    <img src="products/Micro Coil Heater/images/mch5.jpg" />
                                 </li>
 
                                 <!-- items mirrored twice, total of 12 -->
@@ -118,13 +124,19 @@
                         <div id="carousel" class="flexslider">
                             <ul class="slides">
                                 <li>
-                                    <img src="pics/microcoilheaters1.jpg" />
+                                    <img src="products/Micro Coil Heater/pics/mch1.png" />
                                 </li>
                                 <li>
-                                    <img src="pics/microcoilheaters2.jpeg" />
+                                    <img src="products/Micro Coil Heater/pics/mch2.jpg" />
                                 </li>
                                 <li>
-                                    <img src="pics/microcoilheaterspecs.png" />
+                                    <img src="products/Micro Coil Heater/pics/mch3.jpg" />
+                                </li>
+                                <li>
+                                    <img src="products/Micro Coil Heater/pics/mch4.jpg" />
+                                </li>
+                                <li>
+                                    <img src="products/Micro Coil Heater/pics/mch5.jpg" />
                                 </li>
 
                                 <!-- items mirrored twice, total of 12 -->
