--- a/micro_tubular_coil_heater.html
+++ b/micro_tubular_coil_heater.html
@@ -103,16 +103,19 @@
                         <div id="slider" class="flexslider">
                             <ul class="slides">
                                 <li>
-                                    <img src="images/micro-tubular-coil-heater.jpg" />
+                                    <img src="products/Micro tubular Coil Heater/images/mtch1.jpg" />
                                 </li>
                                 <li>
-                                    <img src="images/micro-tubular-coil-heater1.jpg" />
+                                    <img src="products/Micro tubular Coil Heater/images/mtch2.jpg" />
                                 </li>
                                 <li>
-                                    <img src="images/microandcoilheater.png" />
+                                    <img src="products/Micro tubular Coil Heater/images/mtch3.jpg" />
                                 </li>
                                 <li>
-                                    <img src="images/microtubularcoilspecs1.png" />
+                                    <img src="products/Micro tubular Coil Heater/images/mtch4.png" />
+                                </li>
+                                <li>
+                                    <img src="products/Micro tubular Coil Heater/images/mtch5.jpg" />
                                 </li>
                                 <!-- items mirrored twice, total of 12 -->
                             </ul>
@@ -120,16 +123,19 @@
                         <div id="carousel" class="flexslider">
                             <ul class="slides">
                                 <li>
-                                    <img src="pics/micro-tubular-coil-heater.jpg" />
+                                    <img src="products/Micro tubular Coil Heater/pics/mtch1.jpg" />
                                 </li>
                                 <li>
-                                    <img src="pics/micro-tubular-coil-heater1.jpg" />
+                                    <img src="products/Micro tubular Coil Heater/pics/mtch2.jpg" />
                                 </li>
                                 <li>
-                                    <img src="pics/microandcoilheater.png" />
+                                    <img src="products/Micro tubular Coil Heater/pics/mtch3.jpg" />
                                 </li>
                                 <li>
-                                    <img src="pics/microtubularcoilspecs1.png" />
+                                    <img src="products/Micro tubular Coil Heater/pics/mtch4.png" />
+                                </li>
+                                <li>
+                                    <img src="products/Micro tubular Coil Heater/pics/mtch5.jpg" />
                                 </li>
                                 <!-- items mirrored twice, total of 12 -->
                             </ul>
