--- a/power_saving_heater.html
+++ b/power_saving_heater.html
@@ -102,16 +102,10 @@
             <div id="slider" class="flexslider">
               <ul class="slides">
                 <li>
-                  <img src="images/power_saving_heater.png" />
+                  <img src="products/Power Saving Heater/images/power_saving_heater.png" />
                 </li>
                 <li>
-                  <img src="images/power_saving_heater1.png" />
-                </li>
-                <li>
-                  <img src="images/psh_specs1.png" />
-                </li>
-                <li>
-                  <img src="images/psh_specs2.png" />
+                  <img src="products/Power Saving Heater/images/power_saving_heater1.png" />
                 </li>
                 <!-- items mirrored twice, total of 12 -->
               </ul>
@@ -119,16 +113,10 @@
             <div id="carousel" class="flexslider">
               <ul class="slides">
                 <li>
-                  <img src="pics/power-saving-heaters.jpg" />
+                  <img src="products/Power Saving Heater/pics/power-saving-heaters.jpg" />
                 </li>
                 <li>
-                  <img src="pics/power_saving_heater1.png" />
-                </li>
-                <li>
-                  <img src="pics/psh_specs1.png" />
-                </li>
-                <li>
-                  <img src="pics/psh_specs2.png" />
+                  <img src="products/Power Saving Heater/pics/power_saving_heater1.png" />
                 </li>
                 <!-- items mirrored twice, total of 12 -->
               </ul>
