--- a/sealed_mica_nozzle.html
+++ b/sealed_mica_nozzle.html
@@ -103,10 +103,19 @@
                         <div id="slider" class="flexslider">
                             <ul class="slides">
                                 <li>
-                                    <img src="images/sealed-mica-nozzle-heater.jpg" />
+                                    <img src="products/Sealed Mica Nozzle/images/smn1.jpg" />
                                 </li>
                                 <li>
-                                    <img src="images/sealed-mica-nozzle-heater1.jpeg" />
+                                    <img src="products/Sealed Mica Nozzle/images/smn2.jpg" />
+                                </li>
+                                <li>
+                                    <img src="products/Sealed Mica Nozzle/images/smn3.png" />
+                                </li>
+                                <li>
+                                    <img src="products/Sealed Mica Nozzle/images/smn4.jpg" />
+                                </li>
+                                <li>
+                                    <img src="products/Sealed Mica Nozzle/images/smn5.png" />
                                 </li>
                                 <!-- items mirrored twice, total of 12 -->
                             </ul>
@@ -114,10 +123,19 @@
                         <div id="carousel" class="flexslider">
                             <ul class="slides">
                                 <li>
-                                    <img src="pics/sealed-mica-nozzle-heater.jpg" />
+                                    <img src="products/Sealed Mica Nozzle/pics/smn1.jpg" />
                                 </li>
                                 <li>
-                                    <img src="pics/sealed-mica-nozzle-heater1.jpg" />
+                                    <img src="products/Sealed Mica Nozzle/pics/smn2.jpg" />
+                                </li>
+                                <li>
+                                    <img src="products/Sealed Mica Nozzle/pics/smn3.png" />
+                                </li>
+                                <li>
+                                    <img src="products/Sealed Mica Nozzle/pics/smn4.jpg" />
+                                </li>
+                                <li>
+                                    <img src="products/Sealed Mica Nozzle/pics/smn5.png" />
                                 </li>
 
                                 <!-- items mirrored twice, total of 12 -->
